# vc-ble-light-controller

./: .gitignore  LICENSE  README.md  index.txt  pyproject.toml  vc-ble-light-controller-archive-keyring.gpg
.github/workflows/: ci.yml  release.yml
dists/stable/: InRelease  Release  Release.gpg
docs/: publishing.md
packaging/: vc-ble-light-controller.desktop
pool/main/v/vc-ble-light-controller/: vc-ble-light-controller_0.1.0_all.deb
scripts/: build-deb.sh  capture-screenshot.py  run.sh  setup-user.sh  setup.sh
src/raingel/: __init__.py  app.py  ble.py  bluetooth_config.py  config.py  system_bluetooth.py
src/raingel/ui/: index.html
tests/: test_ble.py  test_bluetooth_config.py  test_config.py
